# nova-assistant

./: .gitignore  README.md  pyproject.toml
backend/: trre.txt
backend/app/: config.example.py  main.py  models.py  prompts.py  routes.py  utils.py
backend/app/kokoro_tts/: tts.py
backend/app/services/: ai_service.py  stt.py  telegram_service.py
